<resources>
    <string name="app_name">Urban Trails</string>
    <string name="welcome">Welcome to Urban Trails</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="go">Let\'s Go!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="description">description</string>
    <string name="item_description">item_description</string>
    <string name="item_name">item_name</string>
    <string name="add">Add</string>
    <string name="first_name_nlast_name">First Name\nLast Name</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="trail_description">Trail Description</string>
    <string name="save_trail">Save Trail</string>
    <string name="save_stop">Save Stop</string>
    <string name="edit_stop_name">Stop Name</string>
    <string name="take_picture">Take Picture</string>
    <string name="hello_user">Hello </string>
    <string name="my_trails">My Trails</string>
    <string name="profile">Profile</string>
    <string name="start_trail">Start Trail</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="friends_trail_feed">Friends Trail Feed</string>
    <string name="search_for_friends">Search For Friends</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="username">Username</string>
    <string name="trail_name">Trail Name</string>
</resources>