<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/description"
            android:padding="3dp" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/item_icon"
            android:text="@string/item_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="192dp"
            android:layout_height="147dp"
            android:layout_below="@+id/item_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/item_icon"
            android:text="@string/item_description" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>