<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="2dp"
    android:background="#FFFFFF"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/description"
            android:padding="3dp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/user_image"
            android:text="@string/item_name"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="93dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="119dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/user_image"
            android:background="@color/colorAccent"
            android:onClick="onClick"
            android:text="@string/add" />

        <TextView
            android:id="@+id/user_description"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/user_image"
            android:text="@string/first_name_nlast_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/existingFriendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="119dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/user_image"
            android:gravity="center"
            android:text="Friends!"
            android:textColor="@color/black"
            android:textStyle="bold|italic" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>